# AZURE2_upog

./: CMakeLists.txt  Makefile  README  azure2  azure2.cpp
cmake/Modules/: FindMinuit2.cmake  FindMinut2.cmake~  FindQwt.cmake  Findgsl.cmake  Findgsl.cmake~  Findgslcblas.cmake~
coul/include/: complex_functions.H  cwfcomp.H  ode_int.H
coul/src/: CMakeLists.txt  Makefile  complex_functions.cpp  cwfcomp.cpp  ode_int.cpp
docs/: Doxyfile
docs/html/: AChannel_8cpp.html  AChannel_8h-source.html  AChannel_8h.html  ALevel_8cpp.html  ALevel_8h-source.html  ALevel_8h.html  AMatrixFunc_8cpp.html  AMatrixFunc_8h-source.html  AMatrixFunc_8h.html  AZURECalc_8cpp.html  AZURECalc_8h-source.html  AZURECalc_8h.html  AZURECalc__thread_8cpp.html  AZURECalc__thread_8h-source.html  AZURECalc__thread_8h.html  AZUREFBuffer_8h-source.html  AZUREFBuffer_8h.html  AZUREMain_8cpp.html  AZUREMain_8h-source.html  AZUREOutput_8cpp.html  AZUREOutput_8h-source.html  AZUREOutput_8h.html  AZUREThread_8cpp.html  AZUREThread_8h-source.html  AZUREThread_8h.html  AngCoeff_8h-source.html  AngCoeff_8h.html  CNuc_8cpp.html  CNuc_8h-source.html  CNuc_8h.html  Config_8cpp.html  Config_8h-source.html  Config_8h.html  Constants_8h-source.html  Constants_8h.html  CoulFunc_8h-source.html  CoulFunc_8h.html  CoulFunc__GSL_8h-source.html  CoulFunc__GSL_8h.html  CoulFunc__other_8h-source.html  (+243 more)
docs/latex/: AChannel_8cpp.tex  AChannel_8h.tex  ALevel_8cpp.tex  ALevel_8h.tex  AMatrixFunc_8cpp.tex  AMatrixFunc_8h.tex  AZURECalc_8cpp.tex  AZURECalc_8h.tex  AZURECalc__thread_8cpp.tex  AZURECalc__thread_8h.tex  AZUREFBuffer_8h.tex  AZUREMain_8cpp.tex  AZUREOutput_8cpp.tex  AZUREOutput_8h.tex  AZUREThread_8cpp.tex  AZUREThread_8h.tex  AngCoeff_8h.tex  CNuc_8cpp.tex  CNuc_8h.tex  Config_8cpp.tex  Config_8h.tex  Constants_8h.tex  CoulFunc_8h.tex  CoulFunc__GSL_8h.tex  CoulFunc__other_8h.tex  DataLine_8cpp.tex  DataLine_8h.tex  Decay_8cpp.tex  Decay_8h.tex  Diagonalize_8h.tex  DoubleFactorial_8cpp.tex  ECIntegral_8cpp.tex  ECIntegral_8h.tex  ECLine_8cpp.tex  ECLine_8h.tex  ECMGroup_8cpp.tex  ECMGroup_8h.tex  EData_8cpp.tex  EData_8h.tex  EPoint_8cpp.tex  (+105 more)
gui/: AZURESetup2.pro  CMakeLists.txt
gui/include/: AZUREMainThread.h  AZUREPlot.h  AZURESetup.h  AboutAZURE2Dialog.h  AddECLineDialog.h  AddLevelDialog.h  AddPairDialog.h  AddSegDataDialog.h  AddSegTestDialog.h  AddTargetIntDialog.h  ChannelDetails.h  ChannelsModel.h  ChooseFileButton.h  EditChecksDialog.h  EditDirsDialog.h  EditOptionsDialog.h  ElementMap.h  ExternalCaptureModel.h  ExternalCaptureTab.h  FilteredTextEdit.h  InfoDialog.h  LevelsHeaderView.h  LevelsModel.h  LevelsTab.h  PairsModel.h  PairsTab.h  PlotTab.h  RichTextDelegate.h  RunTab.h  SegmentsDataModel.h  SegmentsTab.h  SegmentsTestModel.h  TargetIntModel.h  TargetIntTab.h  TextEditBuffer.h
gui/src/: AZUREPlot.cpp  AZURESetup.cpp  AZURESetup.qrc  AboutAZURE2Dialog.cpp  AddECLineDialog.cpp  AddLevelDialog.cpp  AddPairDialog.cpp  AddSegDataDialog.cpp  AddSegTestDialog.cpp  AddTargetIntDialog.cpp  CMakeLists.txt  ChannelDetails.cpp  ChannelsModel.cpp  ChooseFileButton.cpp  EditChecksDialog.cpp  EditDirsDialog.cpp  EditOptionsDialog.cpp  ExternalCaptureModel.cpp  ExternalCaptureTab.cpp  InTabDocs.cpp  InfoDialog.cpp  LevelsModel.cpp  LevelsTab.cpp  PairsModel.cpp  PairsTab.cpp  PlotTab.cpp  RichTextDelegate.cpp  RunTab.cpp  SegmentsDataModel.cpp  SegmentsTab.cpp  SegmentsTestModel.cpp  TargetIntModel.cpp  TargetIntTab.cpp  main.cpp
include/: AChannel.h  ALevel.h  AMatrixFunc.h  AZURECalc.h  AZUREFBuffer.h  AZUREMain.h  AZUREOutput.h  AZUREParams.h  AngCoeff.h  CNuc.h  Config.h  Constants.h  CoulFunc.h  DataLine.h  Decay.h  Diagonalize.h  ECIntegral.h  ECLevel.h  ECLine.h  ECMGroup.h  EData.h  EDataIterator.h  EPoint.h  ESegment.h  EffectiveCharge.h  EigenFunc.h  Equation.h  ExtrapLine.h  GSLException.h  GenMatrixFunc.h  IntegratedFermiFunc.h  Interference.h  JGroup.h  KGroup.h  KLGroup.h  MGroup.h  MatInv.h  MatrixInv.h  NFIntegral.h  NucLine.h  (+7 more)
src/: AChannel.cpp  ALevel.cpp  AMatrixFunc.cpp  AZURE2.cpp  AZURE2.rc  AZURECalc.cpp  AZUREMain.cpp  AZUREOutput.cpp  AZUREParams.cpp  AngCoeff.cpp  CMakeLists.txt  CNuc.cpp  Config.cpp  CoulFunc.cpp  DataLine.cpp  Decay.cpp  DoubleFactorial.cpp  ECIntegral.cpp  ECLevel.cpp  ECLine.cpp  ECMGroup.cpp  EData.cpp  EDataIterator.cpp  EPoint.cpp  ESegment.cpp  EffectiveCharge.cpp  EigenFunc.cpp  Equation.cpp  ExtrapLine.cpp  GSLException.cpp  GSL_AngCoeff.cpp  GSL_Diagonalize.cpp  GSL_MatInv.cpp  GSL_PEshift_dE.cpp  GSL_ShftFunc.cpp  GSL_ShftFunc_dE.cpp  GSL_Target_Integration.cpp  GSL_WhitFunc.cpp  GenMatrixFunc.cpp  IntegratedFermiFunc.cpp  (+18 more)
